--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,37 @@
 body {
   color: #cbd5e1;
 }
+
+@layer components {
+  .card {
+    perspective: 150rem;
+    position: relative;
+    height: 100%;
+    width: 100%;   
+    background: none;
+  }
+
+  .card-side {
+    height: 100%; 
+    width: 100%;
+    transition: all 0.8s ease;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: white;
+  }
+  
+  .card-side.back {
+    transform: rotateY(-180deg);
+  }
+  
+  .card:hover .card-side.front {
+    transform: rotateY(180deg);
+  }
+  
+  .card:hover .card-side.back {
+    transform: rotateY(0deg);
+  }
+}
+
