--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,9 @@ body {
     perspective: 150rem;
     position: relative;
     height: 100%;
-    width: 100%;   
+    width: 100%; 
+    min-width: 290px;
+    min-height: 290px;
     background: none;
   }
 
